去掉不用的方法

--- a/example/demo/mvc/demo.html
+++ b/example/demo/mvc/demo.html
@@ -6,7 +6,7 @@
   <meta name="-webkit-tap-highlight" content="no" /> 
   <meta content="IE=10" http-equiv="x-ua-compatible" /> 
   <title>mvc例子</title> 
-  <script type="text/javascript" src="../../../assets/qmik-debug.all.js"></script>
+  <script type="text/javascript" src="../../../builds/qmik-debug.all.1.4.00.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
