--- a/example/demo/mvc/mvc.html
+++ b/example/demo/mvc/mvc.html
@@ -1,3 +1,4 @@
+ <html name="${name}">
  <head> 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta charset="utf8" /> 
@@ -36,6 +37,7 @@
      addr=<input name="addr" type="text"/><br/>
      name=<input name="name" />
   </div>
+
   <div>
    degree=<input type="text" name="degree" required>
   	<form q-ctrl="subdent"  q-submit="subccess()" style="background:;">
@@ -60,7 +62,8 @@
 
       <!-- q-for checkboxs -->
       <div q-for="item in checkboxs" class="box">
-        cbk${item.value} <input type="checkbox" name="cbk" value="cbk${item.value}"> &nbsp;
+        &nbsp; cbk${item.value}
+        <input type="checkbox" name="cbk" value="cbk${item.value}">&nbsp;
       </div>
       <br/>
       <br/>
@@ -68,11 +71,13 @@
       ra2 <input type="radio" name="ra" value="ra2">
       ra3 <input type="radio" name="ra" value="ra3">
       <br/>
-  		showName:${showName} name:{{name}}  n1:${n1}  select:${select}  mselect:<${mselect}>
-      textarea:${textarea}  cbk:${cbk}  ra:${ra}
-      <p> degree: {{degree}}  gg:{{gg}} </p>
+  		showName:${showName} name:{{name}} n1:${n1} <br/>
+      select:${select} mselect:<${mselect}>       <br/>
+      textarea:${textarea} cbk:${cbk}  ra:${ra}   <br/>
+      <p> degree: {{degree}} gg:{{gg}} </p>
+
       <ul q-for=" item  in  list " style="background:green;">
-          <li name="${name}">  ${item.name} -- age:  ${ item.age } </li>
+          <li name="${name}">  ${item.name} -- age: ${ item.age } </li>
       </ul>
       
   	</form>
@@ -121,6 +126,9 @@
                 value:"mon"
               });
               scope.apply("checkboxs");
+              $.delay(function(){
+                $.log(scope);
+              }, 1000);
             }, 3000);
         },
         "subdent1": function(scope){
@@ -137,3 +145,4 @@
     })
   </script>
  </body>
+</html>
