--- a/example/demo/mvc/error-q-ctrl.html
+++ b/example/demo/mvc/error-q-ctrl.html
@@ -6,7 +6,7 @@
   <meta name="-webkit-tap-highlight" content="no" /> 
   <meta content="IE=10" http-equiv="x-ua-compatible" /> 
   <title>q-ctrl不支持子q-ctrl控制器</title> 
-  <script type="text/javascript" src="../../../assets/qmik-debug.all.js"></script>
+  <script type="text/javascript" src="../../Qmik.all.js"></script>
   <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body style="visibility:hidden;">
