--- a/example/demo/mvc/mobile/index.html
+++ b/example/demo/mvc/mobile/index.html
@@ -16,8 +16,8 @@
   <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=2.0,user-scalable=no" />
   <meta content="yes" name="apple-mobile-web-app-capable" /> 
   <meta content="telephone=no" name="format-detection" /> 
-  <link rel="stylesheet" type="text/css" href="index.css" /> 
-  <script src="../../../../assets/Qmik-debug.all.js?119"></script> 
+  <link rel="stylesheet" type="text/css" href="index.css?11" /> 
+  <script type="text/javascript" src="../../../Qmik.all.js"></script>
  </head> 
  <body>
   <div class="wrap" id="wrap">
