--- a/example/demo/sun/demo1.html
+++ b/example/demo/sun/demo1.html
@@ -6,7 +6,7 @@
   <meta name="-webkit-tap-highlight" content="no" /> 
   <title>测试sun模块开发</title> 
   <script type="text/javascript" src="../../../test/unit/qunit.js"></script>
-  <script type="text/javascript" src="../../../builds/qmik.1.3.61.js"></script>
+  <script type="text/javascript" src="../../Qmik.all.js"></script>
   <style type="text/css">
   	#result{
   		position: fixed;
