--- a/example/demo/sun/demo.html
+++ b/example/demo/sun/demo.html
@@ -22,6 +22,30 @@
 </head>
 <body>
 <div>
+	<!-- 声明控制器 --> <div q-ctrl="demoCtrl">
+倒计时: <input name="time" type="text"/> ${time} 或 {{time}}
+用户名: <input name="name" type="text"/> ${name}
+</div>
+
+<script>
+    $.app().ctrl({
+      demoCtrl: function(scope){//定义控制器  scope:会话,作用空间在q-ctrl里面,不能超出
+        //计时器
+        scope.time = 999;
+        $.cycle(function(){
+            scope.time--;
+            scope.apply(["time"]);//更新到界面
+        }, 1000);
+
+        //监听变量
+        scope.watch({
+            name: function(map){
+                $.log(map)
+            }
+        });
+      }
+    });
+</script>
 	<pre>
 		$.config({debug:true});
 		$.sun.config({
