--- a/example/demo/office/index.html
+++ b/example/demo/office/index.html
@@ -27,7 +27,8 @@
     <nav> 
      <ul class="amz-header-nav am-collapse"> 
       <li><a href="view/main.html" target="imain">开始使用</a></li> 
-      <li><a href="view/offering.html" target="imain">捐助</a></li> 
+      <li><a href="view/offering.html" target="imain">捐助</a></li>
+      <li><a href="https://github.com/leochen36/qmik" target="_blank">github</a></li> 
      </ul> 
     </nav> 
    </div> 
