--- a/example/demo/mvc/error-q-ctrl.html
+++ b/example/demo/mvc/error-q-ctrl.html
@@ -1,4 +1,5 @@
  <!DOCTYPE html>
+ <html>
  <head> 
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
   <meta charset="utf8" /> 
@@ -68,3 +69,4 @@
     //
   </script>
  </body>
+ </html>
