--- a/example/demo/mvc/demo1.html
+++ b/example/demo/mvc/demo1.html
@@ -140,7 +140,7 @@
         window.scope = scope;
         scope.clickme = function(e){
             scope.msg = "我变了 "+ parseInt($.now()/1000+Math.random()*100)+'';
-            scope.apply(); //这种写法,性能比较好,保更新 msg 对应的节点信息
+            scope.apply(["msg","gohome"]); //这种写法,性能比较好,保更新 msg 对应的节点信息
             //scope.apply();//这种写法性能比较差,会更新整个控制器的所有节点信息, 
         }
         scope.parent.watch("user.userName", function(map){
