--- a/example/demo/mvc/profile/index.html
+++ b/example/demo/mvc/profile/index.html
@@ -30,7 +30,7 @@
       </div> 
       <div class="menu-bd"> 
        <div class="menu-bd-panel"> 
-        <a href="//i.taobao.com/my_taobao.htm?ad_id=&amp;am_id=&amp;cm_id=&amp;pm_id=1501036000a02c5c3739" target="_top" id="J_UserAvatar" class="user-avatar"><img src="//assets.alicdn.com/g/s.gif" data-lazy="//wwc.taobaocdn.com/avatar/getAvatar.do?userNick=${user.nick}&amp;width=80&amp;height=80&amp;type=sns" width="80" height="80" alt="${user.nick}的头像" /></a> 
+        <a href="//i.taobao.com/my_taobao.htm?ad_id=&amp;am_id=&amp;cm_id=&amp;pm_id=1501036000a02c5c3739" target="_top" id="J_UserAvatar" class="user-avatar"></a> 
         <div class="user-info"> 
          <p class="user-operate"><a href="//member1.taobao.com/member/fresh/account_security.htm" target="_top">账号管理</a><span class="site-nav-pipe">|</span><a href="//login.taobao.com/member/logout.jhtml?f=top&amp;out=true&amp;redirectURL=http%3A%2F%2Fwww.taobao.com%2F" target="_top">退出</a></p> 
          <p><a href="//login.taobao.com/aso/logintowb?target=//weibo.com" target="_top" id="J_WeiboBindIcon" class="weibo-bind-icon"></a></p> 
