--- a/example/demo/mvc/demo.html
+++ b/example/demo/mvc/demo.html
@@ -21,7 +21,7 @@
           </li>
           <li>
             <span class="lt">价: </span><input name="price" type="text" value="999"/>
-            <span class="lt">动态绑定:</span>[<span class="bind">${price}</span>]
+            <span class="lt">动态绑定:</span>[<span class="bind">${price + price}</span>]
           </li>
         </ul>
         <div  class="box border1 bh" border1>
